Implementação de Paginação e Testes